--- a/styles/scss/_s-neon-benefits.scss
+++ b/styles/scss/_s-neon-benefits.scss
@@ -1,4 +1,6 @@
 .s-neon-benefits {
+  min-height: 786px;
+
   display: flex;
   justify-content: center;
   align-items: center;
